--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -144,6 +144,12 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             android:visibility="invisible"
             android:textColor="#990000"
             android:textStyle="bold"/>
+      <ImageView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:rotation="-90"
+          android:id="@+id/imageViewId"
+          />
       <org.firstinspires.ftc.rmrobotics.opmodes.AutoNav.RMCameraView
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
