--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -1,23 +1,17 @@
 <!--
 Copyright (c) 2014, 2015 Qualcomm Technologies Inc
-
 All rights reserved.
-
 Redistribution and use in source and binary forms, with or without modification,
 are permitted (subject to the limitations in the disclaimer below) provided that
 the following conditions are met:
-
 Redistributions of source code must retain the above copyright notice, this list
 of conditions and the following disclaimer.
-
 Redistributions in binary form must reproduce the above copyright notice, this
 list of conditions and the following disclaimer in the documentation and/or
 other materials provided with the distribution.
-
 Neither the name of Qualcomm Technologies Inc nor the names of its contributors
 may be used to endorse or promote products derived from this software without
 specific prior written permission.
-
 NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
 LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
@@ -35,7 +29,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:opencv="http://schemas.android.com/apk/res-auto"
     tools:context="org.firstinspires.ftc.robotcontroller.internal.FtcRobotControllerActivity"
     android:focusable="true"
     android:id="@+id/entire_screen"
@@ -43,48 +36,48 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
   <!-- black bar on top -->
   <RelativeLayout
-    android:id="@+id/top_bar"
-    android:layout_width="fill_parent"
-    android:layout_height="80dp"
-    android:background="@color/black">
+      android:id="@+id/top_bar"
+      android:layout_width="fill_parent"
+      android:layout_height="80dp"
+      android:background="@color/black">
 
     <ImageView
-      android:id="@+id/robotIcon"
-      android:src="@drawable/icon_robotcontroller"
-      android:layout_width="wrap_content"
-      android:layout_height="fill_parent"
-      android:adjustViewBounds="true"
-      android:layout_margin="1dp"/>
+        android:id="@+id/robotIcon"
+        android:src="@drawable/icon_robotcontroller"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:adjustViewBounds="true"
+        android:layout_margin="1dp"/>
 
     <TextView
-      android:id="@+id/textDeviceName"
-      android:layout_toEndOf="@id/robotIcon"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textColor="@color/white"
-      android:textAppearance="?android:attr/textAppearanceMedium"
-      android:padding="8dp"
-      android:textStyle="bold"/>
+        android:id="@+id/textDeviceName"
+        android:layout_toEndOf="@id/robotIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:padding="8dp"
+        android:textStyle="bold"/>
 
     <ImageButton
-      android:id="@+id/menu_buttons"
-      android:scaleType="fitXY"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:src="@drawable/icon_menu"
-      android:background="@color/black"
-      android:padding="15dp"
-      android:adjustViewBounds="true"
-      android:layout_alignParentEnd="true"
-      android:layout_centerInParent="true"
-      android:layout_centerHorizontal="true"
-      android:layout_margin="10dp"/>
+        android:id="@+id/menu_buttons"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_menu"
+        android:background="@color/black"
+        android:padding="15dp"
+        android:adjustViewBounds="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"/>
 
   </RelativeLayout>
   <!-- end of black bar -->
 
   <include layout="@layout/header"
-           android:id="@+id/included_header"/>
+      android:id="@+id/included_header"/>
 
   <RelativeLayout
       android:id="@+id/RelativeLayout"
@@ -94,63 +87,64 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
-      android:paddingTop="@dimen/activity_vertical_margin">
+      android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
         android:id="@+id/textNetworkConnectionStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:text="" />
 
     <TextView
         android:id="@+id/textRobotStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textNetworkConnectionStatus"
-        android:text=""
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:text="" />
 
     <TextView
         android:id="@+id/textOpMode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textRobotStatus"
-        android:text=""
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:text="" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textGamepad1"
-        android:layout_below="@+id/textOpMode">
+        android:layout_below="@+id/textOpMode"
+        android:layout_above="@+id/textGamepad1">
 
       <LinearLayout
           android:id="@+id/cameraMonitorViewId"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:orientation="vertical" />
+          android:orientation="vertical"
+          />
 
       <!-- When visible, the error message will overlay and thus partially
            obscure part of the camera monitor. We make this trade off so as to
            allow for a bigger camera monitor view in the common case when the
            error is not in fact present
         -->
-        <TextView
-            android:id="@+id/textErrorMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:visibility="invisible"
-            android:textColor="#990000"
-            android:textStyle="bold"/>
+      <TextView
+          android:id="@+id/textErrorMessage"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text=""
+          android:visibility="invisible"
+          android:textColor="#990000"
+          android:textStyle="bold"/>
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:rotation="-90"
           android:id="@+id/imageViewId"
           />
-      <org.firstinspires.ftc.rmrobotics.opmodes.SandstoRM.AutoNav.RMCameraView
+      <org.firstinspires.ftc.rmrobotics.util.autonav.RMCameraView
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:visibility="gone"
@@ -162,16 +156,16 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textGamepad2"
-        android:text=""
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:text="" />
 
     <TextView
         android:id="@+id/textGamepad2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text=""
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:text="" />
 
     <TextView
         android:id="@+id/textRemoteProgrammingMode"
@@ -179,51 +173,17 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         android:layout_height="match_parent"
         android:background="#ff0066B3"
         android:gravity="center"
-        android:text=""
         android:textColor="#ffffffff"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:visibility="invisible" />
-
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="350dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true">
-
-      <org.opencv.android.JavaCameraView
-          android:id="@+id/show_camera_activity_java_surface_view"
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:visibility="gone"
-          opencv:camera_id="any"
-          opencv:show_fps="true" />
-
-      <Button
-          android:id="@+id/button3"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="end|bottom"
-          android:onClick="frameButtonOnClick"
-          android:text="Grab" />
-
-      <TextView
-          android:id="@+id/resultText"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="end|top"
-          android:text="[RESULT]"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:textColor="#ff0000" />
-
-    </FrameLayout>
+        android:visibility="invisible"
+        android:text="" />
 
   </RelativeLayout>
 
   <WebView
-    android:id="@+id/webViewBlocksRuntime"
-    android:layout_width="1dp"
-    android:layout_height="1dp" />
+      android:id="@+id/webViewBlocksRuntime"
+      android:layout_width="1dp"
+      android:layout_height="1dp" />
 
 </LinearLayout>
